# Agentic-CIA

./: Dockerfile  README.md  docker-compose.yaml  pyproject.toml
chroma_sac/: chroma.sqlite3
src/agentic_cia/application/: chat_service_factory.py
src/agentic_cia/application/api/: main.py
src/agentic_cia/application/api/routers/: chat.py
src/agentic_cia/application/api/schemas/: chat.py
src/agentic_cia/application/chat_products_service/: agent.py  service.py
src/agentic_cia/application/chat_sac_service/: agent.py  service.py
src/agentic_cia/application/evaluation/: rag_eval.py
src/agentic_cia/domain/prompts/: prompt.py
src/agentic_cia/infrastructure/api/: main.py  models.py
src/agentic_cia/infrastructure/api/factory/: chat_service_base.py
src/agentic_cia/infrastructure/api/routers/: chat.py
src/agentic_cia/infrastructure/api/schemas/: chat.py
src/agentic_cia/infrastructure/db/: app.py  base.py  eval_sac.py  prompt.py
tests/: __init__.py  test_agentic_cia.py
