[project]
name = "agentic-cia"
version = "0.1.0"
description = "This is a template for creating powerful Agent APIs."
readme = "README.md"
classifiers = [
    # TODO
]
license = {text = "MIT"}
dependencies = [
  "typer",
  "fastapi[standard]",
  "loguru",
  "pydantic",
  "pydantic-settings",
  "ipykernel",
  "uvicorn>=0.35.0",
  "langchain>=0.3.27",
  "langchain-community>=0.3.29",
  "langchain-openai>=0.3.33",
  "sqlalchemy>=2.0.43",
  "sqlite-utils>=3.38",
  "chromadb>=1.0.21",
  "langchain-ollama>=0.3.8",
  "langchain-chroma>=0.2.6",
  "langgraph>=0.6.7",
]
requires-python = ">= 3.10"

[dependency-groups]
dev = [
    "coverage",
    "pre-commit",
    "pytest",
    "ruff",
]

[project.scripts]
agentic_cia = "agentic_cia.cli:app"

[tool.ty]
# All rules are enabled as "error" by default; no need to specify unless overriding.
# Example override: relax a rule for the entire project (uncomment if needed).
# rules.TY015 = "warn"  # For invalid-argument-type, warn instead of error.

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # Pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
]

[tool.uv]
package = true
